# scratch

./: README.md  main.py  pyproject.toml
FastAPI/: newtest.py  test.py
fasttest/: info.md  main.py  test.py
strmlit/: clean_data_for_analysis.csv  newtest.py  teststream.py
