[project]
name = "scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "matplotlib>=3.10.8",
    "pandas>=2.2.0,<3.0.0",
    "pydantic>=2.12.5",
    "seaborn>=0.13.2",
    "streamlit>=1.45.0,<2.0.0",
]

[tool.fastapi]
entrypoint = "fasttest.main:app"
